-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7, 8, 9
-
Component/s: client-libs
-
Environment:
JDK 7, 8
Solaris 11 x64
-
b94
-
x86
-
solaris_11
Testsuite name: Regression
Test name: closed/java/awt/font/JNICheck/JNICheck.sh
JDK tested: JDK 7 u40 b32
OS tested: Solaris 11 x64
Test fails since 7 FCS b148.
LOG:
#section:shell
----------messages:(3/125)----------
command: shell JNICheck.sh []
reason: User specified action: run shell/timeout=300 JNICheck.sh
elapsed time (seconds): 1.12
----------System.out:(1/12)----------
Test failed
----------System.err:(0/0)----------
result: Failed. Execution failed: exit code 1
test result: Failed. Execution failed: exit code 1
Test name: closed/java/awt/font/JNICheck/JNICheck.sh
JDK tested: JDK 7 u40 b32
OS tested: Solaris 11 x64
Test fails since 7 FCS b148.
LOG:
#section:shell
----------messages:(3/125)----------
command: shell JNICheck.sh []
reason: User specified action: run shell/timeout=300 JNICheck.sh
elapsed time (seconds): 1.12
----------System.out:(1/12)----------
Test failed
----------System.err:(0/0)----------
result: Failed. Execution failed: exit code 1
test result: Failed. Execution failed: exit code 1