8020448: Test closed/java/awt/font/JNICheck/JNICheck.sh fails on Solaris 11 since 7 FCS

Reviewed-by: azvegint, rchamyal